[tool.poetry]
name = "fast-api-webapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.1"
Authlib = "^1.3.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.0.post1"
itsdangerous = "^2.1.2"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
